# Rodan

./: .dockerignore  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  Dockerfile  LICENSE  Makefile  README_seriously.md  TODO_cleanup_for_summer.txt  _clean_database.sh  arm-compose.yml  bigdiff  build.yml  celery_start.sh.example  celery_start.sh.in  compose.yaml  configure.ac  containers_healthcheck.sh  docker-compose-backup.yml  docker-compose.yml  fabfile.py  gittings.sh  gunicorn_start.sh.example  gunicorn_start.sh.in  loadclassifier.py  perms.sh  production.yml  pyproject.toml  readme.md  readme.txt  requirements.txt  rodan-client.yml  runLog.txt  run_containers  salzinnes_demo_classifier.xml  settings.py  (+7 more)
docker/: Dockerfile.in  README  configure.ac  deploy.sh.in
rodan-main/code/: .gitignore  .pyup.yml  .touch  AUTHORS  _clean_database.sh  manage.py  pyproject.toml  requirements.txt  websocket.ini
rodan-main/code/etc/nginx/sites-available/: rodan
rodan-main/code/etc/supervisor/conf.d/: rodan.conf
rodan-main/code/helper_scripts/: highlight_from_mei.py  mei-all-4.0.1.odd  mult_upload
rodan-main/code/rodan/: __init__.py  celery.py  constants.py  email.py  exceptions.py  registerJobs.yaml  registerJobs.yml  settings.py  urls.py
rodan-main/code/rodan/admin/: __init__.py  admin.py  helpers.py
rodan-main/code/rodan/auth/: backends.py
rodan-main/code/rodan/jobs/: __init__.py  base.py  convert_to_str.py  convert_to_unicode.py  core.py  deep_eq.py  diva_generate_json.py  gnu_requirements.txt  labeler.py  load.py  master_task.py  py3_requirements.txt  register_all_jobs.py  resource_distributor.py  resource_identification.py  test_rodan.py
rodan-main/code/rodan/jobs/Calvo_classifier/: README.md  __init__.py  calvo_classifier.py  calvo_trainer.py  fast_calvo_classifier.py  fast_calvo_trainer.py  local_fast_trainer.py  requirements.txt  resource_types.yaml  training_engine_sae.py
rodan-main/code/rodan/jobs/JSOMR2MEI/: AomrMeiOutput.py  base.py
rodan-main/code/rodan/jobs/MEI_encoding/: .gitignore  070r.xml  070r2.xml  258f.xml  LICENSE  MEI_encoding.py  README.md  __init__.py  build_mei_file.py  parse_classifier_table.py  requirements.txt  state_machine.excalidraw  state_machine.py  test_mei.py  test_state_machine.excalidraw  visualize_alignment.py
rodan-main/code/rodan/jobs/MEI_resizing/: README.md  __init__.py  mei_resize.py
rodan-main/code/rodan/jobs/Paco_classifier/: LICENSE  README.md  __init__.py  fast_calvo_classifier.py  fast_calvo_trainer.py  fast_paco_classifier.py  fast_paco_easy_training.py  fast_paco_trainer.py  fast_trainer_lib.py  input_settings_test.py  recognition_engine.py  requirements.txt  resource_types.yaml  training_engine_sae.py
rodan-main/code/rodan/jobs/SAE_binarization/: SAE_binarization.py  __init__.py
rodan-main/code/rodan/jobs/background_removal/: BgRemovalRodan.py  __init__.py  resource_types.yaml
rodan-main/code/rodan/jobs/biollante_rodan/: .gitignore  README.md  __init__.py  biollante_rodan.py  index.html  knnga_util.py
rodan-main/code/rodan/jobs/column_split/: __init__.py  base.py  column_split.py
rodan-main/code/rodan/jobs/diagonal_neume_slicing/: .gitignore  DirtyLayerRepair.py  ProjectionSplitting.py  SliceFinding.py  __init__.py  base.py
rodan-main/code/rodan/jobs/extract_c_clefs/: __init__.py  base.py  extract_c_clefs.py
rodan-main/code/rodan/jobs/gamera_rodan/: __init__.py  gamera-rodan-Py3doc.md  gamera-rodan-doc.md
rodan-main/code/rodan/jobs/helloworld/: helloworld.py
rodan-main/code/rodan/jobs/heuristic_pitch_finding/: PitchFinding.py  README.md  StaffFinding.py  __init__.py  base.py  resource_types.yaml
rodan-main/code/rodan/jobs/hpc_fast_trainer/: LICENSE  __init__.py  hpc_fast_trainer.py
rodan-main/code/rodan/jobs/interactive_classifier/: __init__.py  interactive_classifier.py  wrapper.py
rodan-main/code/rodan/jobs/jSymbolic_Rodan/: extract_features.py
rodan-main/code/rodan/jobs/mei2vol_wrapper/: .gitignore  .gitmodules  LICENSE  __init__.py  m2v_wrapper.py  requirements.txt  resource_types.yaml
rodan-main/code/rodan/jobs/neon_wrapper/: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  correct-import  editor.html  editor.ts  package.json  (+4 more)
rodan-main/code/rodan/migrations/: 0001_initial.py  0002_add_workflowjobgroupcoordinateset.py  0002_auto_20230522_1420.py  0003_add_resourcelist.py  0003_auto_20230627_1526.py  0004_auto_20160606_0930.py  0004_auto_20230711_1052.py  0004_connection_ratio.py  0004_inputport_extern_resources.py  0005_auto_20230711_1052.py  0006_auto_20160607_1454.py  0007_auto_20160620_1153.py  0008_tempauthtoken.py  0014_auto_20161019_1307.py  0017_resourcelist_resource_type.py  0018_auto_20200318_2345.py  0021_auto_20200429_0914.py  0022_auto_20200817_1511.py  0023_auto_20200915_1923.py
rodan-main/code/rodan/models/: __init__.py  connection.py  input.py  inputport.py  inputporttype.py  job.py  output.py  outputport.py  outputporttype.py  project.py  resource.py  resourcelist.py  resourcetype.py  resultspackage.py  runjob.py  tempauthtoken.py  user.py  userpreference.py  workflow.py  workflowjob.py  workflowjobgroup.py  workflowrun.py
rodan-main/code/rodan/paginators/: pagination.py
rodan-main/code/rodan/serializers/: __init__.py  connection.py  djoser.py  input.py  output.py  outputport.py  resource.py  resourcelist.py  resultspackage.py  runjob.py  user.py  userpreference.py  workflow.py
rodan-main/code/rodan/templates/: neon_square_viewer.html
rodan-main/code/rodan/test/: __init__.py  dummy_jobs.py  helpers.py  testIndividual_mimetype_identification.py  testIndividual_permission.py  test_all_jobs.py  test_load.sh  test_permission.py
rodan-main/code/rodan/views/: auth.py  connection.py  input.py  inputport.py  inputporttype.py  interactive.py  job.py  main.py  outputport.py  project.py  resource.py  resourcelabel.py  resourcelist.py  resourcetype.py  resultspackage.py  runjob.py  taskqueue.py  user.py  userpreference.py  workflow.py  workflowjobgroup.py  workflowrun.py
rodan/jobs/mei2vol_wrapper/MEI2Volpiano/: pyproject.toml
(+1912 files in other folders)
